# BigQuery-Agent-Analytics-SDK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  SDK.md  autoformat.sh  pyproject.toml
dashboard/: README.md  agent_analytics_dashboard.ipynb  app.py  dashboard_webapp.ipynb  requirements.txt
deploy/: README.md
docs/: README.md  blog_post_1_draft.md  context_graph_v2_design.md  context_graph_v3_design.md  context_graph_v5_design.md  design.md  extractor_compilation_plan_parser.md  hatteras_evaluation.md  implementation_plan_concept_index_runtime.md  implementation_plan_remote_function.md  learning_ontology_and_context_graph.md  ontology_graph_v4_design.md  ontology_graph_v5_design.md  prd_unified_analytics_interface.md  proposal_bigquery_agent_cli.md  python_udf_support_design.md  ramp_up_observability.md  remote_function_rationale.md
examples/: README.md  ai_classify_side_by_side.sql  ai_forecast_side_by_side.sql  ai_ml_integration_demo.ipynb  ai_similarity_validation.sql  categorical_dashboard.sql  categorical_evaluation_demo.ipynb  ci_eval_pipeline.sh  cli_agent_tool.py  context_graph_adcp_demo.ipynb  continuous_query_alerting.sql  dashboard_v2.ipynb  dashboard_v2_bigframes.ipynb  e2e_demo.py  e2e_demo_output.txt  e2e_notebook_demo.ipynb  event_semantics_views_bigframes_demo.ipynb  memory_service_demo.ipynb  nba_agent_trace_analysis_notebook.ipynb  ontology_graph_v4_demo.html  ontology_graph_v4_demo.ipynb  ontology_graph_v5_demo.ipynb  python_udf_eval_summary.sql  python_udf_evaluation.sql  python_udf_event_semantics.sql  remote_function_dashboard.sql  ymgo_graph_spec.yaml
scripts/: README.md  quality_report.py  quality_report.sh  sample_report.md
tests/: test_abstract_adapter_filter.py  test_ai_ml_integration.py  test_bigframes_evaluator.py  test_bridge_hardening.py  test_categorical_evaluator.py  test_categorical_views.py  test_cli.py  test_context_graph.py  test_context_graph_labels.py  test_dual_loader.py  (+45 more)
(+130 files in other folders)
