[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigquery-agent-analytics"
version = "0.1.0"
description = "SDK for analyzing and evaluating agent traces stored in BigQuery."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  {name = "Google LLC"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "google-cloud-bigquery>=3.0.0",
  "google-adk>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "typer>=0.9.0",
]

[project.optional-dependencies]
llm = [
  "google-genai>=1.0.0",
]
bigframes = [
  "bigframes>=1.0.0",
]
cli = []
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pyink>=24.3.0",
  "isort>=5.0",
]
all = [
  "bigquery-agent-analytics[llm,bigframes,cli,dev]",
]

[project.scripts]
bq-agent-sdk = "bigquery_agent_analytics.cli:main"
gm = "bigquery_ontology.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bigquery_agent_analytics", "src/bigquery_ontology"]

[tool.pyink]
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.isort]
profile = "google"
# Use a high line_length so isort only sorts imports without wrapping.
# pyink handles all line-length formatting (prevents isort/pyink conflicts).
line_length = 200
indent = 2
multi_line_output = 4
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
